packages/GlobalSalesCore/main/default/objects/RegionalQuota__c/RegionalQuota__c.object-meta.xml
<CustomObject>
    <description>Manages sales quotas for different regions and territories in global sales operations</description>
    <label>Regional Quota</label>
    <nameField>
        <displayFormat>RQ-{000000}</displayFormat>
        <label>Regional Quota Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regional Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>