packages/GlobalSalesCore/main/default/objects/RegionalQuota__c/fields/ActualRevenue__c.field-meta.xml
<CustomField>
    <fullName>ActualRevenue__c</fullName>
    <label>Actual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>