packages/GlobalSalesCore/main/default/objects/RegionalQuota__c/fields/FiscalQuarter__c.field-meta.xml
<CustomField>
    <fullName>FiscalQuarter__c</fullName>
    <label>Fiscal Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>