packages/GlobalSalesCore/main/default/objects/RegionalQuota__c/fields/FiscalYear__c.field-meta.xml
<CustomField>
    <fullName>FiscalYear__c</fullName>
    <label>Fiscal Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>