packages/GlobalSalesCore/main/default/objects/RegionalQuota__c/fields/QuotaAmount__c.field-meta.xml
<CustomField>
    <fullName>QuotaAmount__c</fullName>
    <label>Quota Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>